--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                      <span class="contact-icon"><i class="fas fa-envelope" ></i></span><a href="mailto:pol@polnet.ir"> pol@polnet.ir</a>
                  </li>
                  <li>
-                     <span class="contact-icon" ><i class="fas fa-mobile "></i>  </span><a style="display: inline-block;direction: ltr;">+98 912 205 00 48</a>
+                     <span class="contact-icon" ><i class="fas fa-mobile "></i>  </span><a href="tel:+989122050048" style="display: inline-block;direction: ltr;">+98 912 205 00 48</a>
                  </li>
 
             </ul>
